--- a/internship.html
+++ b/internship.html
@@ -69,11 +69,11 @@
 <p><span class="badge badge-light">Atlanta Atlanta Atlanta Atlanta</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/skupos/ab4a6941-b264-48d4-8a73-a911379e150d'>Skupos - Partner Marketing Intern</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/skupos/ab4a6941-b264-48d4-8a73-a911379e150d'>Skupos - Partner Marketing Intern</a></h5> 
 <p><span class="badge badge-light">Denver</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/drchrono/284e8502-b3be-4e5c-b01d-a259ecc89368'>DrChrono - Finance & Accounting Intern</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/drchrono/284e8502-b3be-4e5c-b01d-a259ecc89368'>DrChrono - Finance & Accounting Intern</a></h5> 
 <p><span class="badge badge-light">Sunnyvale California</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -151,11 +151,11 @@
 <p><span class="badge badge-light">Karnataka, India</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='http://jacksonspalding.applytojob.com/apply/yZzeQQcAfu/PostGrad-Intern-Public-Relations-Account-Coordinator'>Post-Grad Intern - Public Relations Account Coordinator - Jackson Spalding - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jacksonspalding.applytojob.com/apply/yZzeQQcAfu/PostGrad-Intern-Public-Relations-Account-Coordinator'>Post-Grad Intern - Public Relations Account Coordinator - Jackson Spalding - Career Page</a></h5> 
 <p><span class="badge badge-light">Atlanta</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://close2real.join.com/jobs/264837-kardiologe-internist-mit-klinikerfahrung-fuer-berlin-oder-halle-m-w-d'>Job @ close2real (Berlin): Kardiologe/Internist mi... | JOIN</a></h5> 
+<h5><a href='https://close2real.join.com/jobs/264837-kardiologe-internist-mit-klinikerfahrung-fuer-berlin-oder-halle-m-w-d'>Job @ close2real (Berlin): Kardiologe/Internist mi... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -169,7 +169,7 @@
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://taxfix.recruitee.com/o/pr-social-media-intern-mfd'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://taxfix.recruitee.com/o/pr-social-media-intern-mfd'>
       PR & Social Media Intern (m/f/d) - Taxfix
     </a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
@@ -199,7 +199,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://consultport.join.com/jobs/255313-product-manager-internship'>Job @ CONSULTPORT (Berlin): Product Manager Intern... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://consultport.join.com/jobs/255313-product-manager-internship'>Job @ CONSULTPORT (Berlin): Product Manager Intern... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -235,7 +235,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BYond/743999692325746-data-scientist-developer-intern'>B.Yond Data Scientist Developer - Intern | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BYond/743999692325746-data-scientist-developer-intern'>B.Yond Data Scientist Developer - Intern | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -321,7 +321,7 @@ that?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/domo/jobs/1785824'>Job Application for Data Science Consulting Intern at Domo</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/domo/jobs/1785824'>Job Application for Data Science Consulting Intern at Domo</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -453,7 +453,7 @@ learning?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qxkaVfwG&k=Job&j=oPnCafwI&__jvst=Employee&__jvsd=sjkAHgwF&__jvsc=Twitter&bid=nkrHTKwA&jvi=oPnCafwI,Job&jvk=Job'>Schneider Electric - Spain Careers - Internship in Computational Linguistics</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qxkaVfwG&k=Job&j=oPnCafwI&__jvst=Employee&__jvsd=sjkAHgwF&__jvsc=Twitter&bid=nkrHTKwA&jvi=oPnCafwI,Job&jvk=Job'>Schneider Electric - Spain Careers - Internship in Computational Linguistics</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-25</p>
 <hr/>
@@ -477,11 +477,11 @@ learning?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='http://launchmetrics.applytojob.com/apply/KzJnY0CMdP/Digital-Marketing-SEO-Content-Native-French-Internship'>Digital Marketing / SEO Content (Native French Internship) - Launchmetrics - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://launchmetrics.applytojob.com/apply/KzJnY0CMdP/Digital-Marketing-SEO-Content-Native-French-Internship'>Digital Marketing / SEO Content (Native French Internship) - Launchmetrics - Career Page</a></h5> 
 <p><span class="badge badge-light">NYC Paris London Milan Los Angeles Tokyo Madrid</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
 
 <!--End body here -->
 
